[gd_scene load_steps=10 format=2]

[ext_resource path="res://Environments/raum1.png" type="Texture" id=1]
[ext_resource path="res://Environments/front_walls.png" type="Texture" id=2]
[ext_resource path="res://Templates/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Templates/Room.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.2444, 8.07174 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 71.9729, 181.439 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 107.779, 190.983 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 434.564, 49.4372 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 97.2971, 194.087 )

[node name="Room" type="Node2D"]
scale = Vector2( 0.69, 0.647 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Room" type="Sprite" parent="."]
position = Vector2( 927.778, 557.963 )
texture = ExtResource( 1 )

[node name="FrontWalls" type="Sprite" parent="."]
position = Vector2( 927.979, 557.489 )
z_index = 2
texture = ExtResource( 2 )

[node name="Wall_North" type="StaticBody2D" parent="." groups=[
"North",
"wall",
]]
collision_layer = 512
collision_mask = 0

[node name="North" type="CollisionShape2D" parent="Wall_North"]
position = Vector2( 439.778, 109.963 )
scale = Vector2( 23.24, 8.92 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="North2" type="CollisionShape2D" parent="Wall_North"]
position = Vector2( 1415.78, 109.963 )
scale = Vector2( 23.24, 8.92 )
shape = SubResource( 1 )

[node name="Wall_East" type="StaticBody2D" parent="." groups=[
"East",
"wall",
]]
collision_layer = 512
collision_mask = 0

[node name="East" type="CollisionShape2D" parent="Wall_East"]
position = Vector2( 1750.44, 345.785 )
shape = SubResource( 2 )

[node name="East2" type="CollisionShape2D" parent="Wall_East"]
position = Vector2( 1791.39, 829.515 )
z_index = 2
shape = SubResource( 3 )

[node name="Wall_South" type="StaticBody2D" parent="." groups=[
"South",
"wall",
]]
position = Vector2( 927.979, 557.489 )
collision_layer = 512
collision_mask = 0

[node name="South" type="CollisionShape2D" parent="Wall_South"]
position = Vector2( -496.486, 508.381 )
z_index = 2
shape = SubResource( 4 )

[node name="South2" type="CollisionShape2D" parent="Wall_South"]
position = Vector2( 496.471, 508.381 )
z_index = 2
shape = SubResource( 4 )

[node name="Wall_West" type="StaticBody2D" parent="." groups=[
"West",
"wall",
]]
collision_layer = 512
collision_mask = 0

[node name="West" type="CollisionShape2D" parent="Wall_West"]
position = Vector2( 74.28, 831.753 )
z_index = 2
shape = SubResource( 5 )

[node name="West2" type="CollisionShape2D" parent="Wall_West"]
position = Vector2( 102.362, 343.361 )
shape = SubResource( 2 )

[node name="Exit_West" parent="." instance=ExtResource( 3 )]
position = Vector2( 56.315, 580.825 )
scale = Vector2( 1.32, 1.73214 )
z_index = 2
monitorable = false
collision_layer = 512
collision_mask = 1
direction = 3

[node name="RoomSpawn_West" type="Position2D" parent="."]
position = Vector2( -1856, 0 )

[node name="PlayerStart_West" type="Position2D" parent="."]
position = Vector2( 160, 576 )

[node name="Exit_North" parent="." instance=ExtResource( 3 )]
position = Vector2( 928, 63.4678 )
scale = Vector2( 1.96692, 1.01694 )
monitorable = false
collision_layer = 512
collision_mask = 1

[node name="RoomSpawn_North" type="Position2D" parent="."]
position = Vector2( 0, -1112 )

[node name="PlayerStart_North" type="Position2D" parent="."]
position = Vector2( 928, 150 )

[node name="Exit_East" parent="." instance=ExtResource( 3 )]
position = Vector2( 1800.85, 581.266 )
scale = Vector2( 1.4, 1.68 )
z_index = 2
monitorable = false
collision_layer = 512
collision_mask = 1
direction = 1

[node name="RoomSpawn_East" type="Position2D" parent="."]
position = Vector2( 1856, 0 )

[node name="PlayerStart_East" type="Position2D" parent="."]
position = Vector2( 1704, 576 )

[node name="Exit_South" parent="." instance=ExtResource( 3 )]
position = Vector2( 928.956, 1133.17 )
scale = Vector2( 1.88001, 1.25215 )
monitorable = false
collision_layer = 512
collision_mask = 1
direction = 2

[node name="RoomSpawn_South" type="Position2D" parent="."]
position = Vector2( 0, 1112 )

[node name="PlayerStart_South" type="Position2D" parent="."]
position = Vector2( 928, 1018 )
scale = Vector2( 1.96692, 1.01694 )

[node name="CameraPoint" type="Position2D" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint" type="Position2D" parent="SpawnPoints"]
position = Vector2( 640, 360 )
[connection signal="exit_entered" from="Exit_West" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exit_North" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exit_East" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exit_South" to="." method="_on_exit_entered"]
